# ProteusClone

./: .gitignore  CMakeLists.txt  capacitor.cpp  capacitor.h  circuit.cpp  circuit.h  circuitscene.cpp  circuitscene.h  component.cpp  component.h  componentfactory.cpp  componentfactory.h  componentinfo.h  dcsource.cpp  dcsource.h  diode.cpp  diode.h  dynamicpropertiesdialog.cpp  dynamicpropertiesdialog.h  junction.cpp  junction.h  librarymanager.cpp  librarymanager.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  net.cpp  net.h  node.cpp  node.h  pin.cpp  pin.h  resistor.cpp  resistor.h  toolmanager.cpp  toolmanager.h  twoterminalcomponent.cpp  twoterminalcomponent.h  wire.cpp  wire.h  (+5 more)
commands/: addcomponentcommand.cpp  addcomponentcommand.h  addwirecommand.cpp  addwirecommand.h  commandbase.cpp  commandbase.h  deletecomponentcommand.cpp  deletecomponentcommand.h  movecommand.cpp  movecommand.h  rotatecommand.cpp  rotatecommand.h
